--- a/02-Fundamental-Part-2/index.html
+++ b/02-Fundamental-Part-2/index.html
@@ -1,11 +1,33 @@
-< !DOCTYPE html >
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>JavaScript Fundamentals – Part 2</title>
+    <style>
+      body {
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        background: linear-gradient(to top left, #28b487, #7dd56f);
+      }
+      h1 {
+        font-family: sans-serif;
+        font-size: 50px;
+        line-height: 1.3;
+        width: 100%;
+        padding: 30px;
+        text-align: center;
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <h1>JavaScript Fundamentals – Part 2</h1>
+
+    <script src="/Complete JavaScript Course R2/Complete-JavaScript-Course-R2/02-Fundamental-Part-2/script.js"></script>
+    <!-- <script src="/Complete JavaScript Course R2/Complete-JavaScript-Course-R2/01-Fundamentals-Part-1/Assignments.js"></script> -->
+    <!-- <script src="/Complete JavaScript Course R2/Complete-JavaScript-Course-R2/01-Fundamentals-Part-1/Challenges.js"></script> -->
   </body>
 </html>
