--- a/02-Fundamental-Part-2/index.html
+++ b/02-Fundamental-Part-2/index.html
@@ -26,7 +26,7 @@
   <body>
     <h1>JavaScript Fundamentals – Part 2</h1>
 
-    <script src="/Complete JavaScript Course R2/Complete-JavaScript-Course-R2/02-Fundamental-Part-2/script.js"></script>
+    <!-- <script src="/Complete JavaScript Course R2/Complete-JavaScript-Course-R2/02-Fundamental-Part-2/script.js"></script> -->
     <!-- <script src="/Complete JavaScript Course R2/Complete-JavaScript-Course-R2/02-Fundamental-Part-2/Assignments.js"></script> -->
     <!-- <script src="/Complete JavaScript Course R2/Complete-JavaScript-Course-R2/02-Fundamental-Part-2/Challenges.js"></script> -->
   </body>
