--- a/03-Developer-Skills/index.html
+++ b/03-Developer-Skills/index.html
@@ -25,6 +25,7 @@
   </head>
   <body>
     <h1>Developer Skills & Editor Setup</h1>
-    <script src="script.js"></script>
+    <script src="/Complete JavaScript Course R2/Complete-JavaScript-Course-R2/03-Developer-Skills/script.js"></script>
+    <script src="/Complete JavaScript Course R2/Complete-JavaScript-Course-R2/03-Developer-Skills/Challenges.js"></script>
   </body>
 </html>
