--- a/04-HTML-CSS/index.html
+++ b/04-HTML-CSS/index.html
@@ -31,7 +31,7 @@
       <h2>Your Name Here</h2>
       <p>Please fill in this form :)</p>
       <input type="text" placeholder="Your Name" />
-      <button>Ok</button>
+      <button>Ok!</button>
     </form>
   </body>
 </html>
