Updated tags and data

--- a/04-HTML-CSS/index.html
+++ b/04-HTML-CSS/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="/Complete JavaScript Course R2/Complete-JavaScript-Course-R2/04-HTML-CSS/style.css"
+    />
     <title>Learning HTML & CSS</title>
   </head>
   <body>
-    <h1>
-      Hello World <br />
-      JavaScript is fun, so is HTML & CSS
-    </h1>
+    <h1>JavaScript is fun, so is HTML & CSS</h1>
     <p class="firstP">
       You can lear JavaScript without HTML and CSS, but for DOM Manipulation
       it's useful to have basic ideas of HTML & CSS.
@@ -24,14 +25,20 @@
       alt="Profile Picture"
     />
 
-    <h6>Heading 6 <br />Another Heading</h6>
+    <h2>Another Heading</h2>
     <p class="secondP">Just Another Paragraph</p>
 
     <form id="your-name">
       <h2>Your Name Here</h2>
-      <p>Please fill in this form :)</p>
+      <p class="firstP">Please fill in this form :)</p>
       <input type="text" placeholder="Your Name" />
       <button>Ok!</button>
     </form>
+
+    <marquee>
+      This page is booring🥹 I Know and I also know how to make it intresting 😉
+      but i am not doing it's a reason i will tell you later But you notice you
+      stay on this page till the end of this text ..... 😂😂😂😂
+    </marquee>
   </body>
 </html>
