--- a/05-Guess-My-Number/index.html
+++ b/05-Guess-My-Number/index.html
@@ -8,6 +8,9 @@
     <title>Guess My Number!</title>
   </head>
   <body>
+    <div>
+      <marquee behavior="" direction="left">Random text testing</marquee>
+    </div>
     <header>
       <h1>Guess My Number!</h1>
       <p class="between">(Between 1 and 20)</p>
