added updated index

--- a/11-Arrays-Bankist/index.html
+++ b/11-Arrays-Bankist/index.html
@@ -124,5 +124,6 @@
     </footer> -->
 
     <script src="script.js"></script>
+    <!-- <script src="/11-Arrays-Bankist/Challenges.js"></script> -->
   </body>
 </html>
